[tool.poetry]
name = "insta-scraping"
version = "0.1.0"
description = ""
authors = ["aghyad albalkhi <aghyadalbalkhi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
webdriver-manager = "^3.4.2"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
